Fix overflow problem

--- a/web/style.css
+++ b/web/style.css
@@ -64,3 +64,15 @@ h6 { font-size: .5em; }
 .main pre {
   overflow: scroll;
 }
+
+.main figure {
+  overflow: scroll;
+}
+
+.main span {
+  overflow: scroll;
+}
+
+.main code {
+  overflow: scroll;
+}
